[~] Fix when fixed-button is not centered of the screen

--- a/app/javascript/styles/components/_buttons.scss
+++ b/app/javascript/styles/components/_buttons.scss
@@ -38,6 +38,11 @@
 
   &--fixed-bottom {
     position: absolute;
+    right: 0;
     bottom: 20px;
+    left: 0;
+
+    margin-right: auto;
+    margin-left: auto;
   }
 }
